--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,17 @@
     <string name="item_1">item 1</string>
     <string name="item_2">item 2</string>
     <string name="item_3">item 3</string>
+    <string name="my_inage">my inage</string>
+    <string name="james_n">James N</string>
+    <string name="ex_gmail_com">ex@gmail.com</string>
+    <string name="inbox">Inbox</string>
+    <string name="starred">starred</string>
+    <string name="sent_mail">sent mail</string>
+    <string name="drafts">Drafts</string>
+    <string name="subheader">Subheader</string>
+    <string name="all_mail">All mail</string>
+    <string name="trash">Trash</string>
+    <string name="spam">Spam</string>
+    <string name="open_drawer">Open navigation drawer</string>
+    <string name="close_drawer">Close navigation drawer</string>
 </resources>
