--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="Text_Filed">Text Field</string>
     <string name="password">password:</string>
     <string name="flat_button">FLAT Button</string>
+    <string name="button">Button</string>
+    <string name="switch_off_on">Switch OFF/ON</string>
 </resources>
